# pathmarks

./: README.md  pyproject.toml
pathmarks/: main.py
pathmarks/parser/: parser.py
pathmarks/widgets/: filefinder.py  viewpane.py
tests/: test_parser.py
