[tool.poetry]
name = "pathmarks"
version = "0.1.0"
description = "Better log hunting"
authors = ["Jeremy Bensman <jeremy@wirerabbit.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
textual = "^0.45.1"
pytest = "^7.4.3"


[tool.poetry.group.dev.dependencies]
black = "^23.12.0"
pylint = "^3.0.3"
textual-dev = "^1.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pathmarks = "pathmarks.main:start"
